--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 //= template/head.html
 
-
 <!--***********Main content*************-->
 <div class="middle_container">
     <div class="content_width">
         <h1>asdfasfsf</h1>
     </div>
-</div>
-
+</div><!--End main content-->
 
 //= template/footer.html
 
