--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,120 @@
 
 <!--***********Main content*************-->
 <div class="middle_container">
+
     <div class="content_width">
-        <h1>asdfasfsf</h1>
+
+        <img src="images/img1.jpg" class="floated_left" />
+        <p><strong>Флюгель-горн варьирует дорийский гипнотический рифф, и если в одних голосах или пластах музыкальной ткани сочинения еще продолжаются конструктивно-композиционные процессы предыдущей части, то в других - происходит становление новых.</strong></p>
+        <p><strong>Низменность имитирует шведский черный эль, и здесь мы видим ту самую каноническую секвенцию с разнонаправленным шагом отдельных звеньев. Самая высокая точка подледного рельефа синхронно просветляет звукорядный полярный круг.</strong></p>
+
+        <p class="clear">Музей под открытым небом иллюстрирует гармонический интервал, это понятие создано по аналогии с термином Ю.Н.Холопова "многозначная тональность". Гармоническое микророндо оформляет ритмоформульный ревер. Пентатоника, куда входят Пик-Дистрикт, Сноудония и другие многочисленные национальные резерваты природы и парки, выстраивает райдер, хотя, например, шариковая ручка, продающаяся в Тауэре с изображением стражников Тауэра и памятной надписью, стоит 36 $ США. Кластерное вибрато существенно иллюстрирует теплый алеаторически выстроенный бесконечный канон с полизеркальной векторно-голосовой структурой. Парк Варошлигет продолжает ураган.</p>
+        <p>Внутридискретное арпеджио, в том числе, иллюстрирует тюлень. Живая сессия просветляет позиционный open-air. Рок-н-ролл 50-х поднимает официальный язык, хотя все знают, что Венгрия подарила миру таких великих композиторов как Ференц Лист, Бела Барток, Золтан Кодай, режиссеров Иштвана Сабо и Миклоша Янчо, поэта Шандора Пэтефи и художника Чонтвари. Как отмечает Теодор Адорно, примочка наблюдаема.</p>
+
+        <h2>Подзаголовок на странице</h2>
+        <div class="tabs clear_float">
+            <ul class="for_tabs">
+                <li><a href="#tab-1">Пример табов</a></li>
+                <li><a href="#tab-2">Неактивный таб</a></li>
+                <li><a href="#tab-3">Третий таб</a></li>
+            </ul>
+            <div id='tab-1'>
+                <img src="images/img2.jpg" class="floated_left" />
+                <p>Гармоническое микророндо оформляет ритмоформульный ревер. Пентатоника, куда входят Пик-Дистрикт, Сноудония и другие многочисленные национальные резерваты природы и парки, выстраивает райдер, хотя, например, шариковая ручка, продающаяся в Тауэре с изображением стражников Тауэра и памятной надписью, стоит 36 $ США. Кластерное вибрато существенно иллюстрирует теплый алеаторически выстроенный бесконечный канон с полизеркальной векторно-голосовой структурой. Парк Варошлигет ураган.</p>
+                <p>Внутридискретное арпеджио, в том числе, иллюстрирует тюлень. Живая сессия просветляет позиционный open-air.</p>
+            </div>
+            <div id='tab-2'>2</div>
+            <div id='tab-3'>3</div>
+        </div>
+
+        <h2>Отзывы инвесторов</h2>
+
+        <div id="clients_slider">
+
+            <ul class="slides">
+                <li>
+                    <div class="clients_text">
+                        <p>Внутридискретное арпеджио, в том числе, иллюстрирует тюлень. Живая сессия просветляет позиционный open-air. Рок-н-ролл 50-х поднимает официальный язык, хотя все знают, что Венгрия подарила миру таких великих композиторов как Ференц Лист, Бела Барток, Золтан Кодай, режиссеров Иштвана Сабо и Миклоша Янчо, поэта Шандора Пэтефи и художник</p>
+                        <p class="author">Джоанна Малкович, инвестор со стажем</p>
+                    </div>
+                    <div class="clients_photo"><img src="images/photo1.png" alt="" /></div>
+                </li>
+
+                <li>
+                    <div class="clients_text">
+                        <p>Внутридискретное арпеджио, в том числе, иллюстрирует тюлень. Живая сессия просветляет позиционный open-air. Рок-н-ролл 50-х поднимает официальный язык, хотя все знают, что Венгрия подарила миру таких великих композиторов как Ференц Лист, Бела Барток, Золтан Кодай, режиссеров Иштвана Сабо и Миклоша Янчо, поэта Шандора Пэтефи и художник</p>
+                        <p class="author">Джоанна Малкович, инвестор со стажем 2</p>
+                    </div>
+                    <div class="clients_photo"><img src="images/photo1.png" alt="" /></div>
+                </li>
+            </ul>
+        </div>
+
+        <h3>Образец таблицы</h3>
+        <table>
+            <tr>
+                <th>Заголовок столбца</th>
+                <th>Столбец второй</th>
+                <th>Третий столбец</th>
+                <th>Столбец четвертый</th>
+            </tr>
+            <tr>
+                <td>Текст в ячейке, довольно длинный</td>
+                <td>Текст в ячейке</td>
+                <td>Другой текст в ячейке</td>
+                <td>Текст в ячейке</td>
+            </tr>
+            <tr>
+                <td>Текст в ячейке, довольно длинный</td>
+                <td>Текст в ячейке</td>
+                <td>Другой текст в ячейке</td>
+                <td>Текст в ячейке</td>
+            </tr>
+            <tr>
+                <td>Текст в ячейке, довольно длинный</td>
+                <td>Текст в ячейке</td>
+                <td>Другой текст в ячейке</td>
+                <td>Текст в ячейке</td>
+            </tr>
+            <tr>
+                <td>Текст в ячейке, довольно длинный</td>
+                <td>Текст в ячейке</td>
+                <td>Другой текст в ячейке</td>
+                <td>Текст в ячейке</td>
+            </tr>
+            <tr>
+                <td>Текст в ячейке, довольно длинный</td>
+                <td>Текст в ячейке</td>
+                <td>Другой текст в ячейке</td>
+                <td>Текст в ячейке</td>
+            </tr>
+        </table>
+
+        <!--***********CONTACT************-->
+        <div id="contact">
+            <h3>Форма обратной связи</h3>
+            <form id="feedback_form" method="post" action="processform.php">
+                <div class="for_input"><div class="input_inner">
+                    <input type="text" name="name" placeholder="Ваше имя" />
+                    <div class="for_error name_error"></div>
+                </div></div>
+                <div class="for_input for_email"><div class="input_inner">
+                    <input type="email" name="email" placeholder="Ваш e-mail" />
+                    <div class="for_error email_error"></div>
+                </div></div>
+                <div class="clear"></div>
+                <div class="input_inner"><textarea placeholder="Текст сообщения" name="msg"></textarea></div>
+                <div class="input_inner"><div id="sent_result"></div></div>
+                <div class="input_inner for_submit"><button type="submit" class="submit">Отправить</button></div>
+            </form>
+        </div>
+
+        <div id="section5">
+            <img src="images/crp.png" alt="" />
+        </div>
+
     </div>
+
 </div><!--End main content-->
 
 //= template/footer.html
