--- a/src/where_do.html
+++ b/src/where_do.html
@@ -3,8 +3,72 @@
 <!--***********Main content*************-->
 <div class="middle_container">
     <div class="content_width">
-        <div class="invest">
+        <div class="invest both">
             <h2>Каким образом работают средства инвесторов</h2>
+            <div class="invest-img right">
+                <img src="images/invest-img1.jpg" alt="img">
+            </div>
+            <div class="invest-text left">
+                <p>
+                    <b>
+                        Для примера, чтобы вырастить обыкновенную курицу, корову или поросенка в личном <br>
+                        подсобном хозяйстве, вам потребуются определенные финансовые затраты. В первую <br>
+                        очередь, это конечно же корм. Так же нам понадобятся средства на помещения для <br>
+                        содержания наших питомцев, различные подкормки и витамины и конечно же время, для <br>
+                        того, чтобы наши подопечные выросли и сами смогли нас кормить.
+                    </b>
+                </p>
+                <p>
+                    В случае со змеями все обстоит примерно так же. Кормление и содержание взрослого питона<br>
+                    обходится около 450 евро в год, а малыша до года, примерно ¼ этой стоимости. Для быстрого<br>
+                    роста питон должен быть постоянно сыт. Размер новорожденного питона 60-70см. Для того<br>
+                    чтобы вырастить его до 2-3 метров, нам понадобится целых 11 месяцев. С возрастом, рост<br>
+                    постепенно замедляется. Ближе к 4-м месяцам с дня рождения, определяется дальнейшая<br>
+                    судьба юных питонов. Самые здоровые и сильные особи редкого окраса, выращиваются до<br>
+                    достижения половозрелого периода<br>
+                    (около 6 лет) и находятся на нашем содержании до его окончания, являясь своеобразным<br>
+                    генофондом или подлежат продаже после первого<br>
+                    удачного спаривания, доказывающего их способность к продолжению рода. Остальная часть<br>
+                    выводка, в зависимости от показателей здоровья, выращивается до 11 месяцев, а затем<br>
+                    отправляется на змеиную ферму, либо выставляется на продажу уже 4-5 месячном возрасте.<br>
+                    Только тогда мы получаем первую прибыль.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="bg-one"></div>
+    <div class="content_width">
+        <div class="invest both">
+            <h2>Для чего мы занимаемся гибридизацией</h2>
+            <div class="invest-img left">
+                <img src="images/invest-img2.jpg" alt="img">
+            </div>
+            <div class="invest-text right">
+                <p>
+                    <b>
+                        Лучшие особи, с нестандартным и редким окрасом, скрещиваются с другими породами.  Этот
+                        процесс называется гибридизацией. Чаще всего это происходит путем искусственного
+                        оплодотворения, так как природой не предусмотрено спаривание особей разного вида.
+                    </b>
+                </p>
+                <p>
+                    Большая часть змеиного выводка редкого окраса, как правило, стерильно или имеет слабые
+                    показатели здоровья, в отличии от малышей стандартной расцветки. В основном это самцы.
+                    Они не способны на дальнейшее воспроизведение здорового и сильного потомства и не
+                    подходят для дальнейшего скрещивания.
+                </p>
+                <p>
+                    Детенышей различных пород питонов традиционного окраса, можно приобрести за 100-300
+                    евро. Существует больше 60 разновидностей гибридов, которые так же скрещиваются друг с
+                    другом. Стартовая цена здорового потомства, полученного в результате удачной
+                    гибридизации, начинается от полутора тысяч евро и доходит до 10 000 евро за особь. При этом
+                    нет никаких гарантий на то, что в последствии, гибриды начнут приносить детенышей такого
+                    же окраса. Такие детки могут рождаться как после первого спаривания, так и только после
+                    второй-третьей кладки, а могут и не появится вовсе никогда. В последствии, как минимум
+                    половина потомства желаемого окраса, опять же, может оказаться абсолютно стерильной, а
+                    половина стандартных будет отличаться отменным здоровье.
+                </p>
+            </div>
         </div>
     </div>
 </div><!--End main content-->
